V4.0 release
Big release! Many changes for 9.98 compatibility with Java 8. See
internal notes.